--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_check_in_out">CheckInOutActivity</string>
+    <string name="title_activity_info_table">InfoTableActivity</string>
 </resources>
